<resources>
    <string name="appName" translatable="false">SmartHome</string>
    <string name="addRoomTitle">Add room</string>
    <string name="addDeviceTitle">Add device for room</string>
    <string name="listEspTitle">List module</string>
    <string name="cloudErrorServerConnect">Connect error</string>
    <string name="cloudErrorServerDisconnect">Server disconnect</string>

    <string name="livingRoomName">Living room</string>
    <string name="bedRoomName">Bed room</string>
    <string name="kitchenRoomName">Kitchen room</string>
    <string name="bathRoomName">Bath room</string>
    <string name="balconyRoomName">Balacony</string>
    <string name="stairsRoomName">Stairs</string>
    <string name="fenceRoomName">Playground</string>
    <string name="mezzanineRoomName">Mezzanine</string>
    <string name="roofRoomName">Roof</string>

    <string name="listRoomItemName">Room</string>
    <string name="listRoomItemDeviceCount">${count} devices</string>

    <string name="addRoomName">Room name</string>
    <string name="addRoomType">Room type</string>
    <string name="addRoomNameHint">Input room name</string>
    <string name="addRoomTypeHint">Choose room type</string>
    <string name="addRoomButton">Create</string>
    <string name="addRoomErrorRequiredName">Required room name</string>
    <string name="addRoomErrorInvalidType">Room type invaild</string>
    <string name="addRoomErrorExistsName">Room name is exists</string>
    <string name="addRoomSuccess">Room added to success</string>

    <string name="roomMenuRename">Rename</string>
    <string name="roomMenuRemove">Remove</string>

    <string name="deviceLight">Light</string>
    <string name="deviceFan">Fan</string>
    <string name="deviceHeater">Heater</string>
    <string name="deviceStatusOnToast">${name} turn on</string>
    <string name="deviceStatusOffToast">${name} turn off</string>

    <string name="addDeviceName">Device name</string>
    <string name="addDeviceNameHint">Input device name</string>
    <string name="addDeviceType">Device type</string>
    <string name="addDeviceButton">Create</string>

    <string name="listEspSsid" translatable="false">SSID</string>
    <string name="listEspPassword">Password</string>
    <string name="listEspShowPassword">Show password</string>

    <string name="listEspScanSuccess">Scan success</string>
    <string name="listEspScanFailed">Scan failed</string>
    <string name="listEspSsidDefault">SSID</string>
    <string name="listEspScanTitle">Scanned module</string>
    <string name="listEspConnectedTitle">Module connected (${count})</string>
    <string name="listEspScanEmpty">No scanning module found</string>
    <string name="listEspConnectedEmpty">No modules connected</string>

    <string name="dialogEspWiFi">Setup WiFi for the module</string>
    <string name="dialogEspWiFiDisagree">Cancel</string>
    <string name="dialogEspWiFiAgree">Continue</string>
    <string name="dialogEspWiFiSsid" translatable="false">SSID</string>
    <string name="dialogEspWiFiPassword">Password</string>
    <string name="dialogEspWiFiShowPassword">Show password</string>
</resources>
