<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dialogEspWiFiSpacing"
    android:paddingEnd="@dimen/dialogEspWiFiSpacing"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialogEspWiFiLabelMarginBottom"
        android:textSize="@dimen/dialogEspWiFiLabelTextSize"
        android:textColor="@color/dialogEspWiFiLabelText"
        android:text="@string/dialogEspWiFiSsid"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialogEspWiFiSsid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogEspWiFiInputMarginTop"
        android:layout_marginBottom="@dimen/dialogEspWiFiInputMarginBottom"
        android:textSize="@dimen/dialogEspWiFiInputTextSize"
        android:textColor="@color/dialogEspWiFiInputText"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialogEspWiFiLabelMarginBottom"
        android:textSize="@dimen/dialogEspWiFiLabelTextSize"
        android:textColor="@color/dialogEspWiFiLabelText"
        android:text="@string/dialogEspWiFiPassword"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialogEspWiFiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogEspWiFiInputMarginTop"
        android:layout_marginBottom="@dimen/dialogEspWiFiInputMarginBottom"
        android:textSize="@dimen/dialogEspWiFiInputTextSize"
        android:textColor="@color/dialogEspWiFiInputText"
        android:inputType="textPassword|textNoSuggestions"
        android:importantForAutofill="no"
        tools:ignore="Autofill,HardcodedText,LabelFor"/>
    
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/dialogEspWiFiShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dialogEspWiFiInputMarginTop"
        android:layout_marginBottom="@dimen/dialogEspWiFiInputMarginBottom"
        android:textSize="@dimen/dialogEspWiFiInputTextSize"
        android:textColor="@color/dialogEspWiFiInputText"
        android:text="@string/dialogEspWiFiShowPassword"/>

</LinearLayout>